# saas-platform

./: Comprehensive Analysis Report NexusCore v4.md  Comprehensive_Comparative_Analysis_PRD-d-3_vs_PRD-q-3.md  Comprehensive_Review_Analysis_PRD.md  Comprehensive_Review_and_Analysis_PAD.md  NexusCore-v4.0-Merged-PRD.md  PAD-Validation-Analysis.md  PAD-o.md  PAD-oq4-1.md  PAD-qdo-1.md  PAD-qdo-2.md  PAD-qdo-3.md  PAD-qdo-4.md  PRD-Comparative-Analysis.md  PRD-c.md  PRD-d-2.md  PRD-d-3.md  PRD-d.md  PRD-gt-2.md  PRD-gt.md  PRD-gt3-2.md  PRD-gt3-3.md  PRD-gt3.md  PRD-k.md  PRD-o.md  PRD-o2-v1.md  PRD-o2-v2md  PRD-o2-v3md  PRD-q-2.md  PRD-q-3.md  PRD-q.md  PRD-qd-3-appendix.md  PRD-qm-1.md  PRD-qm-2.md  PRD-z.md  PRD-z7.md  PROD-g.md  Project Architecture Document.md  Project Requirements Document.md  README.md  README_v4.md  (+7 more)
docs/: AI_response_1.md  ok-plan-merge-PRD-v4.md  opus-plan-README.md  prompt-2.md  prompt-3-improved-PRD.md  prompt-PAD.md  prompt-README.md  prompt-kimiok-improve-PRD.md  share_links.txt  (+1 more)
nexuscore/backend/: Dockerfile  pyproject.toml
nexuscore/backend/apps/billing/: apps.py  models.py
nexuscore/backend/apps/core/: admin.py  middleware.py  urls.py
nexuscore/backend/apps/events/: models.py
nexuscore/backend/apps/leads/: models.py
nexuscore/backend/apps/organizations/: models.py
nexuscore/backend/apps/privacy/: models.py  tasks.py
nexuscore/backend/apps/users/: models.py
nexuscore/backend/apps/webhooks/: models.py
nexuscore/backend/config/: asgi.py  celery.py  urls.py  wsgi.py
nexuscore/backend/config/settings/: base.py  development.py  production.py
nexuscore/backend/requirements/: base.txt  development.txt  production.txt
(+12 files in other folders)
